# PERust-MCPE

./: Cargo.toml  LICENSE  README.md
.github/workflows/: android-build.yml
crates/perust-blocks/: Cargo.toml
crates/perust-blocks/src/: block.rs  block_ids.rs  block_state.rs  lib.rs
crates/perust-command/: Cargo.toml
crates/perust-command/src/: command.rs  defaults.rs  dispatcher.rs  lib.rs  sender.rs
crates/perust-config/: Cargo.toml
crates/perust-config/src/: ban_list.rs  error.rs  lib.rs  ops.rs  server_properties.rs  whitelist.rs
crates/perust-console/: Cargo.toml
crates/perust-console/src/: console.rs  console_sender.rs  lib.rs  logger.rs
crates/perust-entity/: Cargo.toml
crates/perust-entity/src/: attribute.rs  effect.rs  entity.rs  entity_manager.rs  error.rs  lib.rs  living.rs  metadata.rs  player_entity.rs
crates/perust-event/: Cargo.toml
crates/perust-event/src/: dispatcher.rs  event.rs  events.rs  lib.rs
crates/perust-inventory/: Cargo.toml
crates/perust-inventory/src/: container_inventory.rs  error.rs  inventory.rs  inventory_type.rs  item_stack.rs  lib.rs  player_inventory.rs  transaction.rs
crates/perust-items/: Cargo.toml
crates/perust-items/src/: enchantment.rs  item.rs  item_ids.rs  item_registry.rs  lib.rs
crates/perust-nbt/: Cargo.toml
crates/perust-nbt/src/: error.rs  lib.rs  reader.rs  tag.rs  writer.rs
crates/perust-network/: Cargo.toml
crates/perust-network/src/: error.rs  lib.rs  network_manager.rs  network_session.rs  packet_handler.rs
crates/perust-player/: Cargo.toml
crates/perust-player/src/: error.rs  lib.rs  login_state.rs  permission.rs  player.rs  player_list.rs
crates/perust-plugin/: Cargo.toml
crates/perust-plugin/src/: error.rs  lib.rs  plugin.rs  plugin_description.rs  plugin_manager.rs
crates/perust-protocol/: Cargo.toml
crates/perust-protocol/src/: codec.rs  error.rs  lib.rs  packet.rs  protocol_info.rs  types.rs
crates/perust-protocol/src/packets/: chunk.rs  entity.rs  inventory.rs  login.rs  misc.rs  mod.rs  player.rs  resource_pack.rs  text.rs  world.rs
crates/perust-raknet/: Cargo.toml
crates/perust-raknet/src/: encapsulated.rs  error.rs  lib.rs  protocol.rs  reliability.rs  server.rs  session.rs  session_manager.rs  session_ref.rs
crates/perust-scheduler/: Cargo.toml
crates/perust-scheduler/src/: async_pool.rs  lib.rs  scheduler.rs  task.rs
crates/perust-storage/: Cargo.toml
crates/perust-storage/src/: error.rs  json_storage.rs  lib.rs  nbt_storage.rs  region_storage.rs  yaml_storage.rs
crates/perust-utils/: Cargo.toml
crates/perust-utils/src/: binary.rs  color.rs  identity.rs  lib.rs  math.rs  pool.rs  singleton.rs  varint.rs
crates/perust-world/: Cargo.toml
crates/perust-world/src/: biome.rs  chunk.rs  chunk_manager.rs  error.rs  generator.rs  lib.rs  region.rs  world.rs
docs/: ARCHITECTURE.md  PLUGIN_API.md  PROTOCOL.md
examples/: basic_plugin.rs  custom_generator.rs
server/: Cargo.toml  start.bat  start.sh
server/src/: handlers.rs  main.rs  server.rs  tick.rs
tests/: benchmarks.rs  integration_test.rs
