[workspace]
resolver = "2"
members = [
    "crates/perust-utils",
    "crates/perust-nbt",
    "crates/perust-protocol",
    "crates/perust-raknet",
    "crates/perust-network",
    "crates/perust-world",
    "crates/perust-entity",
    "crates/perust-player",
    "crates/perust-inventory",
    "crates/perust-blocks",
    "crates/perust-items",
    "crates/perust-command",
    "crates/perust-event",
    "crates/perust-plugin",
    "crates/perust-scheduler",
    "crates/perust-storage",
    "crates/perust-config",
    "crates/perust-console",
    "server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/Dr1xyDev/PERust-MCPE"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
bytes = "1"
thiserror = "1"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
dashmap = "5"
crossbeam = "0.8"
rayon = "1"
num-traits = "0.2"
num-derive = "0.4"
bitflags = "2"
uuid = { version = "1", features = ["v4", "serde"] }

# Compression
flate2 = "1"

# Cryptography
ring = "0.17"
rsa = "0.9"

# Networking
socket2 = "0.5"

# Time
chrono = "0.4"

# Random
rand = "0.8"

# Collections
hashbrown = "0.14"
indexmap = "2"

# Internal crates
perust-utils = { path = "crates/perust-utils" }
perust-nbt = { path = "crates/perust-nbt" }
perust-protocol = { path = "crates/perust-protocol" }
perust-raknet = { path = "crates/perust-raknet" }
perust-network = { path = "crates/perust-network" }
perust-world = { path = "crates/perust-world" }
perust-entity = { path = "crates/perust-entity" }
perust-player = { path = "crates/perust-player" }
perust-inventory = { path = "crates/perust-inventory" }
perust-blocks = { path = "crates/perust-blocks" }
perust-items = { path = "crates/perust-items" }
perust-command = { path = "crates/perust-command" }
perust-event = { path = "crates/perust-event" }
perust-plugin = { path = "crates/perust-plugin" }
perust-scheduler = { path = "crates/perust-scheduler" }
perust-storage = { path = "crates/perust-storage" }
perust-config = { path = "crates/perust-config" }
perust-console = { path = "crates/perust-console" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
