[package]
name = "perust-blocks"
version.workspace = true
edition.workspace = true

[dependencies]
perust-utils = { workspace = true }
perust-nbt = { workspace = true }
perust-protocol = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
