[package]
name = "perust-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
perust-utils = { workspace = true }
perust-event = { workspace = true }
perust-command = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
