[package]
name = "perust-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
perust-utils = { workspace = true }
perust-nbt = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
