[package]
name = "perust-storage"
version.workspace = true
edition.workspace = true

[dependencies]
perust-nbt = { workspace = true }
perust-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
flate2 = { workspace = true }
